[gd_scene load_steps=23 format=3 uid="uid://3725fjgeqtt8"]

[ext_resource type="Script" uid="uid://djastgjoo0lgw" path="res://skripte/enemy_crabby.gd" id="1_n1my3"]
[ext_resource type="Texture2D" uid="uid://bs6lj6cg5qgu5" path="res://Assets/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 01.png" id="2_n1my3"]
[ext_resource type="Texture2D" uid="uid://co8q01w526r4l" path="res://Assets/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 02.png" id="3_he2cg"]
[ext_resource type="Texture2D" uid="uid://mwllbanu77r4" path="res://Assets/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 03.png" id="4_c6pb4"]
[ext_resource type="Texture2D" uid="uid://bcuqact44e5ha" path="res://Assets/The Crusty Crew/Sprites/Pink Star/07-Attack/Attack 04.png" id="5_rm8yx"]
[ext_resource type="Texture2D" uid="uid://dart5dohv0rh7" path="res://Assets/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 01.png" id="6_rdkqt"]
[ext_resource type="Texture2D" uid="uid://1dk6dsmip8si" path="res://Assets/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 02.png" id="7_1wa37"]
[ext_resource type="Texture2D" uid="uid://c5u6264us2ib4" path="res://Assets/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 03.png" id="8_7nbqj"]
[ext_resource type="Texture2D" uid="uid://cxusr4lrqimfk" path="res://Assets/The Crusty Crew/Sprites/Pink Star/10-Dead Ground/Dead Ground 04.png" id="9_n0d32"]
[ext_resource type="Texture2D" uid="uid://btuadnm3fimts" path="res://Assets/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 01.png" id="10_5ehje"]
[ext_resource type="Texture2D" uid="uid://dm8j3xe5br27w" path="res://Assets/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 02.png" id="11_xsgp0"]
[ext_resource type="Texture2D" uid="uid://crnwyi1x667ft" path="res://Assets/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 03.png" id="12_57c8q"]
[ext_resource type="Texture2D" uid="uid://b2bgtlgqvj5o5" path="res://Assets/The Crusty Crew/Sprites/Pink Star/08-Hit/Hit 04.png" id="13_fe5dx"]
[ext_resource type="Texture2D" uid="uid://dqwgj00efb0ib" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 01.png" id="14_de5o8"]
[ext_resource type="Texture2D" uid="uid://cmew2dn2gygig" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 02.png" id="15_rv0x1"]
[ext_resource type="Texture2D" uid="uid://b28blhf8dmjof" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 03.png" id="16_4x6w7"]
[ext_resource type="Texture2D" uid="uid://cab8f1u5fp7vk" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 04.png" id="17_smyrr"]
[ext_resource type="Texture2D" uid="uid://dm3tw20k30shn" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 05.png" id="18_g346t"]
[ext_resource type="Texture2D" uid="uid://cqlankft2kjvv" path="res://Assets/The Crusty Crew/Sprites/Pink Star/02-Run/Run 06.png" id="19_5jk51"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xwwkd"]
radius = 12.775
height = 25.55

[sub_resource type="SpriteFrames" id="SpriteFrames_bwkoy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n1my3")
}, {
"duration": 1.0,
"texture": ExtResource("3_he2cg")
}, {
"duration": 1.0,
"texture": ExtResource("4_c6pb4")
}, {
"duration": 1.0,
"texture": ExtResource("5_rm8yx")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_rdkqt")
}, {
"duration": 1.0,
"texture": ExtResource("7_1wa37")
}, {
"duration": 1.0,
"texture": ExtResource("8_7nbqj")
}, {
"duration": 1.0,
"texture": ExtResource("9_n0d32")
}],
"loop": false,
"name": &"dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_5ehje")
}, {
"duration": 1.0,
"texture": ExtResource("11_xsgp0")
}, {
"duration": 1.0,
"texture": ExtResource("12_57c8q")
}, {
"duration": 1.0,
"texture": ExtResource("13_fe5dx")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_de5o8")
}, {
"duration": 1.0,
"texture": ExtResource("15_rv0x1")
}, {
"duration": 1.0,
"texture": ExtResource("16_4x6w7")
}, {
"duration": 1.0,
"texture": ExtResource("17_smyrr")
}, {
"duration": 1.0,
"texture": ExtResource("18_g346t")
}, {
"duration": 1.0,
"texture": ExtResource("19_5jk51")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwkoy"]
size = Vector2(29, 18)

[node name="Enemy_PinkStar" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_n1my3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_xwwkd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bwkoy")
animation = &"attack"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -2)
shape = SubResource("RectangleShape2D_bwkoy")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
